@@ -1,6 +1,8 @@
 Revision history for Config::App
 
 {{$NEXT}}
+        - Migrate Travis CI and Coveralls to GitHub Actions and Codecov
+        - Update copyright year
 
 1.12      2020-04-24 12:57:30-07:00 America/Los_Angeles
         - "libs" from included files are all appended not overwritten
